[gd_scene load_steps=9 format=2]

[ext_resource path="res://Imports/Laboratory.tres" type="TileSet" id=1]
[ext_resource path="res://Objects/Door.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/DemoLevel.gd" type="Script" id=3]
[ext_resource path="res://Objects/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Objects/Bat.tscn" type="PackedScene" id=5]
[ext_resource path="res://LabFloor.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=7]
[ext_resource path="res://Objects/Skeleton.tscn" type="PackedScene" id=8]

[node name="MainLevel" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -381.0
margin_top = -255.0
margin_right = 899.0
margin_bottom = 577.0
color = Color( 0, 0, 0, 1 )

[node name="LabFloor" parent="." instance=ExtResource( 6 )]

[node name="Door" parent="." instance=ExtResource( 2 )]
position = Vector2( 32, -24 )

[node name="YSort" type="YSort" parent="."]

[node name="LabSmall" type="TileMap" parent="YSort"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_y_sort = true
collision_layer = 512
collision_mask = 3
format = 1
tile_data = PoolIntArray( -131072, 26, 0, -131069, 26, 0, -131068, 26, 0, -131067, 26, 0, -131066, 87, 0, -131065, 26, 0, -131064, 86, 0, -131063, 26, 0, -131062, 86, 0, -131061, 26, 0, -131060, 26, 0, -131059, 87, 0, -131058, 26, 0, -131057, 26, 0, -131056, 26, 0, -131055, 87, 0, -131054, 26, 0, -131053, 26, 0, -131052, 26, 0, -131051, 86, 0, -131050, 26, 0, -131049, 26, 0, -131048, 26, 0, -131047, 26, 0, -131046, 26, 0, -131045, 26, 0, -131044, 87, 0, -131043, 26, 0, -1, 1610612784, 0, -65536, -1073741769, 0, -65533, 67, 0, -65532, -1073741769, 0, -65531, -1073741769, 0, -65530, 1610612773, 0, -65529, -1073741769, 0, -65528, -1073741769, 0, -65527, -1073741769, 0, -65526, -1073741769, 0, -65525, 67, 0, -65524, -1073741769, 0, -65523, -1073741769, 0, -65522, -1073741769, 0, -65521, -1073741769, 0, -65520, -1073741769, 0, -65519, 13, 0, -65518, -1073741769, 0, -65517, 12, 0, -65516, -1073741769, 0, -65515, -1073741769, 0, -65514, 71, 0, -65513, -1073741769, 0, -65512, 84, 0, -65511, 83, 0, -65510, 18, 0, -65509, -1073741769, 0, -65508, -1073741769, 0, -65507, -1073741769, 0, -65506, -1073741776, 0, 65535, 1610612791, 0, 16, 10, 0, 30, 55, 0, 131071, 1610612791, 0, 65560, 84, 0, 65561, 83, 0, 65562, 72, 0, 65566, 55, 0, 196607, 1610612791, 0, 131102, 55, 0, 262143, 1610612791, 0, 196616, 7, 0, 196620, 1, 0, 196638, 55, 0, 327679, 1610612791, 0, 262154, 0, 0, 262174, 55, 0, 393215, 1610612791, 0, 327710, 55, 0, 458751, 1610612791, 0, 393216, 26, 0, 393217, 26, 0, 393218, 86, 0, 393219, 86, 0, 393220, 26, 0, 393221, 26, 0, 393222, 26, 0, 393223, 26, 0, 393224, 26, 0, 393225, 26, 0, 393226, 26, 0, 393227, 26, 0, 393228, 87, 0, 393229, 87, 0, 393230, 87, 0, 393231, 26, 0, 393232, 26, 0, 393233, 26, 0, 393234, 26, 0, 393235, 26, 0, 393236, 26, 0, 393237, 26, 0, 393238, 26, 0, 393243, 20, 0, 393244, 26, 0, 393245, 26, 0, 393246, 55, 0, 524287, 1610612791, 0, 458752, 2, 0, 458754, 2, 0, 458756, 2, 0, 458759, 70, 0, 458760, 6, 0, 458771, 5, 0, 458773, 68, 0, 458780, 68, 0, 458782, 55, 0, 589823, 1610612791, 0, 524289, 72, 0, 524291, 72, 0, 524293, 72, 0, 524294, 3, 0, 524305, 66, 0, 524306, 66, 0, 524318, 55, 0, 655359, 1610612791, 0, 589853, 79, 0, 589854, 55, 0, 720895, 1610612791, 0, 655372, 11, 0, 655374, 11, 0, 655389, 79, 0, 655390, 55, 0, 786431, 1610612791, 0, 720912, 10, 0, 720925, 79, 0, 720926, 55, 0, 851967, 1610612791, 0, 786462, 55, 0, 917503, 1610612791, 0, 851968, 27, 0, 851969, 27, 0, 851974, 20, 0, 851975, 27, 0, 851976, 27, 0, 851977, 27, 0, 851978, 27, 0, 851979, 536870942, 0, 851980, 536870942, 0, 851981, 536870942, 0, 851982, 24, 0, 851983, 536870942, 0, 851984, 536870942, 0, 851985, 536870942, 0, 851986, 536870999, 0, 851987, 536870942, 0, 851988, 536870942, 0, 851989, 536870942, 0, 851990, 30, 0, 851991, 30, 0, 851992, 30, 0, 851993, 30, 0, 851994, 536870999, 0, 851995, 30, 0, 851996, 30, 0, 851997, 30, 0, 851998, 55, 0, 983039, 1610612791, 0, 917504, 16, 0, 917505, 16, 0, 917511, 16, 0, 917512, 16, 0, 917515, 536870979, 0, 917526, 78, 0, 917527, 3, 0, 917528, 9, 0, 917529, 18, 0, 917531, 536870978, 0, 917532, 536870977, 0, 917534, 55, 0, 1048575, 1610612791, 0, 983070, 55, 0, 1114111, 1610612791, 0, 1048592, 8, 0, 1048598, 78, 0, 1048599, 3, 0, 1048600, 9, 0, 1048601, 18, 0, 1048606, 55, 0, 1179647, 1610612791, 0, 1114142, 55, 0, 1245183, 1610612791, 0, 1179663, 78, 0, 1179664, 3, 0, 1179665, 9, 0, 1179666, 18, 0, 1179678, 55, 0, 1310719, 1610612791, 0, 1245214, 55, 0, 1376255, -1610612688, 0, 1310720, -1610612681, 0, 1310721, -1610612681, 0, 1310722, -1610612681, 0, 1310723, -1610612681, 0, 1310724, -1610612681, 0, 1310725, -1610612681, 0, 1310726, -1610612681, 0, 1310727, -1610612681, 0, 1310728, -1610612681, 0, 1310729, -1610612681, 0, 1310730, -1610612681, 0, 1310731, -1610612681, 0, 1310732, -1610612681, 0, 1310733, -1610612681, 0, 1310734, -1610612681, 0, 1310735, -1610612681, 0, 1310736, -1610612681, 0, 1310737, -1610612681, 0, 1310738, -1610612681, 0, 1310739, -1610612681, 0, 1310740, -1610612681, 0, 1310741, -1610612681, 0, 1310742, -1610612681, 0, 1310743, -1610612681, 0, 1310744, -1610612681, 0, 1310745, -1610612681, 0, 1310746, -1610612681, 0, 1310747, -1610612681, 0, 1310748, -1610612681, 0, 1310749, -1610612681, 0, 1310750, 48, 0 )

[node name="LabLarge" type="TileMap" parent="YSort"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
cell_y_sort = true
format = 1

[node name="StartingPoint" type="Node2D" parent="YSort"]
position = Vector2( 448, 288 )

[node name="Player" parent="YSort" instance=ExtResource( 4 )]
position = Vector2( 439, 304 )

[node name="Bat" parent="YSort" instance=ExtResource( 5 )]
position = Vector2( 108, 271 )

[node name="Bat3" parent="YSort" instance=ExtResource( 5 )]
position = Vector2( 252, 64 )

[node name="Skeleton" parent="YSort" instance=ExtResource( 8 )]
position = Vector2( 393, 171 )

[node name="HUD" parent="." instance=ExtResource( 7 )]

[node name="Restart" type="Button" parent="HUD"]
margin_left = 406.0
margin_top = 39.0
margin_right = 463.0
margin_bottom = 63.0
text = "Restart"

[connection signal="changeScene" from="Door" to="." method="_on_Door_changeScene"]
[connection signal="pressed" from="HUD/Restart" to="." method="_on_Restart_pressed"]

[editable path="HUD"]
